End of Section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -3,6 +3,8 @@
       "DefaultConnection":"Data source=dataingapp.db"
 },
 
+"TokenKey" :"super secret ungussable key",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
